correccion de tipeo

--- a/Logica de programacion 1/practicas/puede_conducir.html
+++ b/Logica de programacion 1/practicas/puede_conducir.html
@@ -3,6 +3,7 @@
 Este programa, de acuerdo con la respuesta del usuario, debe mostrar el mensaje "Puedes conducir" o "No puedes conducir". Recuerda que puede conducir solo quien tiene 18 años o más y también quien tiene una licencia de conducir.
 
 ¡Altera el programa para que responda automáticamente!
+
 <br>
 <br>
 
@@ -19,17 +20,13 @@ Este programa, de acuerdo con la respuesta del usuario, debe mostrar el mensaje 
     var edad = parseInt(prompt("¿Cuál es tu edad?"));
     var tieneLicencia = prompt("¿Tienes licencia? Responde S o N");
 
-    if (edad >= 18) && (tieneLicencia == "S"){
-        imprimir ("puedes conducir");
+    if ((edad >= 18) && (tieneLicencia == "S")){
+        imprimir("Puedes conducir");
     
     }
 
     else {
-        imprimir ("No puedes conducir");
+        imprimir("No puedes conducir");
     }
-
-
-
-
 
 </script>
